tests/cases/errors/unsupported_expr/main.sv
module Top;
  int a;
  initial begin
    a = {1'b1, 1'b0};
  end
endmodule
